changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Give access to jail's information for a region to the plugins.
Nicolas Weeger 2011-06-09

Use a specific field (wc_increase_rate, like skills) for summoning creature's
wc improvement by level.
Nicolas Weeger 2011-06-05

Fix for bug #3309792: Invidious server crash.
Don't try to send animation 0, instead clear FLAG_ANIMATE.
Set a bug face for animation 0, just in case.
Nicolas Weeger 2011-06-01

Correctly update improved weapon's weight in inventory.
Nicolas Weeger 2011-05-29

Ensure account information is stored at creation and character linking.
Nicolas Weeger 2011-05-29

Implement account password change.
Nicolas Weeger 2011-05-23

Tentative fix for bug #3127973: 'detect monster' effect badly positioned.
Nicolas Weeger 2011-05-22

Fix crash with character creation using jxclient.
Nicolas Weeger 2011-05-22

Prevent converters from creating unpaid coins.
Andreas Kirschbaum 2011-05-21

Fix Lythander's pipe not having spell it should.
Nicolas Weeger 2011-05-21

Fix god's knowledge handling always considering the god information as new.
Nicolas Weeger 2011-05-07

Allow messages from lib/messages to be stored through knowledge system.
Nicolas Weeger 2011-05-07

Improve messages (lib/messages): add relative chance, so messages can be
more frequent than others.
Nicolas Weeger 2011-05-07

Remove hard coded stat values - the stat bonuses (as well as max stat) can
be set in a file that is read at load time.  The default lib/stat_bonus
file has bonuses exactly the same as the old hard coded values (or in
case of Charisma, as close as could be done with the change).  Note: