@@ -14,6 +14,9 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Send golem's hp and maxhp as part of statistics, so client can display that.
+Nicolas Weeger 2011-06-12
+
 Give access to jail's information for a region to the plugins.
 Nicolas Weeger 2011-06-09
 
